@@ -1,0 +1,22 @@
+%% Begin copyright
+%%
+%%  /home/jrf/Documents/books/Books20/Docs/Hjs/bibliography.tex
+%%
+%%   Part of the Books20 Project
+%%
+%%   Copyright 2022 James R. Fowler
+%%
+%%   All rights reserved. No part of this publication may be
+%%   reproduced, stored in a retrival system, or transmitted
+%%   in any form or by any means, electronic, mechanical,
+%%   photocopying, recording, or otherwise, without prior written
+%%   permission of the author.
+%%
+%%
+%% End copyright
+
+
+Who was Harlan J.~Smith and why should we care or even
+spell his name correctly?
+
+The catalogue is listed by year.
