@@ -37,15 +37,11 @@
 \centerline{Copyright \copyright 2022 McDonald Observatory}
 
 \section*{Harlan J.~Smith}
-%%\import{./}{biography}
+\import{./}{biography}
 
-Who was Harlan J.~Smith and why should we care or even
-spell his name correctly?
-
+\newpage
 
 \section*{Catalogue of the Harlan J. Smith Collection}
-
-The catalogue is list by year.
 
 \import{./}{books}
 
